Generally, homework is completed